fix(popover): layout flicker on polyfill fix

--- a/packages/kit-headless/src/components/popover/popover.css
+++ b/packages/kit-headless/src/components/popover/popover.css
@@ -12,10 +12,6 @@
   [popover]:not(.\:popover-open) {
     display: none;
   }
-
-  [data-qui-popover-pf] {
-    display: none;
-  }
 }
 
 .animating {
